--- a/website/package.json
+++ b/website/package.json
@@ -15,21 +15,21 @@
     "@hashicorp/react-call-to-action": "3.0.1",
     "@hashicorp/react-content": "7.0.1",
     "@hashicorp/react-docs-page": "13.1.1",
-    "@hashicorp/react-featured-slider": "4.0.0",
+    "@hashicorp/react-featured-slider": "^4.0.1",
     "@hashicorp/react-hashi-stack-menu": "2.0.3",
-    "@hashicorp/react-hero": "7.1.0",
+    "@hashicorp/react-hero": "7.1.1",
     "@hashicorp/react-image": "4.0.1",
     "@hashicorp/react-inline-svg": "6.0.1",
     "@hashicorp/react-learn-callout": "1.0.2",
     "@hashicorp/react-product-downloads-page": "2.0.0",
-    "@hashicorp/react-section-header": "5.0.1",
+    "@hashicorp/react-section-header": "5.0.2",
     "@hashicorp/react-subnav": "8.1.0",
-    "@hashicorp/react-text-split": "3.1.0",
-    "@hashicorp/react-text-split-with-code": "3.1.0",
-    "@hashicorp/react-text-split-with-image": "4.1.0",
-    "@hashicorp/react-text-split-with-logo-grid": "4.1.0",
-    "@hashicorp/react-use-cases": "3.0.1",
-    "@hashicorp/react-vertical-text-block-list": "6.0.1",
+    "@hashicorp/react-text-split": "3.1.1",
+    "@hashicorp/react-text-split-with-code": "3.1.1",
+    "@hashicorp/react-text-split-with-image": "4.1.1",
+    "@hashicorp/react-text-split-with-logo-grid": "4.1.1",
+    "@hashicorp/react-use-cases": "3.0.2",
+    "@hashicorp/react-vertical-text-block-list": "6.0.2",
     "marked": "0.7.0",
     "next": "10.1.3",
     "next-mdx-remote": "^2.1.4",
